# GridPred_ForkGISPRO

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  test.py
gridpred/: plotting.py  prediction.py
gridpred/model/: base.py  random_forest.py
input/: hartford.dbf  hartford.shp  hartford.shx  hartford_pois.csv  hartford_robberies.csv
notebooks/: demo.ipynb  nyc_crashes.ipynb
src/: prediction.py
src/evaluate/: metrics.py
