[project]
name = "gridpred"
version = "1.0.1"
description = "Grid-based prediction using Random Forests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[tool.hatch.build.targets.wheel]
# This ensures only the gridpred folder is packaged
packages = ["gridpred"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"